# gitwasm

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  SPEC.md
.github/workflows/: ci.yml  release.yml
.gitwasm/: cargo-lock-merge.wasm  commit-lint.wasm  lockfile-merge.wasm  manifest.toml  poetry-lock-merge.wasm  secret-scan.wasm  signatures.toml  yarn-lock-merge.wasm
.gitwasm/hooks/: commit-msg  pre-commit
crates/gitwasm/: Cargo.toml  build.rs
crates/gitwasm/src/: commands.rs  gitutil.rs  main.rs  manifest.rs  runner.rs  stock.rs
demo/: run-demo.ps1  run-demo.sh
docs/superpowers/plans/: 2026-07-06-conflict-killer-phase-1.md  2026-07-07-real-fork-demo-repo.md
docs/superpowers/specs/: 2026-07-07-real-fork-demo-repo-design.md
modules/cargo-lock-merge/: Cargo.toml
modules/cargo-lock-merge/src/: main.rs
modules/commit-lint/: Cargo.toml
modules/commit-lint/src/: main.rs
modules/lockfile-merge/: Cargo.toml
modules/lockfile-merge/src/: main.rs
modules/secret-scan/: Cargo.toml
modules/secret-scan/src/: main.rs
